--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 	<body>
 
 		<!--/////////// Social Bar //////////-->
+		<div class="wrapper">
 		<div id="social">
 			<a class="fbook" href="#" target="_blank" title="facebook">Facebook</a>
 			<a class="twitt" href="#" target="_blank" title="twitter">Twitter</a>
 			<a class="gplus" href="#" target="_blank" title="google plus">Google Plus</a>
 		</div>
+	</div>
 		<!--/////////// Ends Social Bar //////////-->
 
 		<!--/////////// Header //////////-->
@@ -57,6 +59,7 @@
 			<div class="wrapper">
 
 				<!--/////////// Sale //////////-->
+				<div class="wrapper clearfix">
 				<section class="shadow">
 					<figure>
 						<img src="images/holidays_shoe_sale.jpg" alt="Picture of kids' shoes on the steps">
@@ -70,11 +73,13 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</section>
-				
-				<h2 class="milk_text">Featured Brands</h2>
+			</div>
+
+				<h2 class="milk_text" class = "col-2 first">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<section class="shadow">
+				  <div class="wrapper clearfix">
+				<section class="shadow col-2 first" >
 					<figure>
 						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -88,9 +93,9 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</section>
 				<!--/////////// Ends Featured Brands //////////-->
-				
+
 				<!--/////////// Archive List //////////-->
-				<section class="shadow">
+				<section class="shadow col-1">
 					<h2>Shoe Archive</h2>
 					<h3><a href="#">2014</a></h3>
 					<ul>
@@ -132,10 +137,11 @@
 						<li><a href="#">Jun</a></li>
 					</ul>
 				</section>
+			</div>
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-				<section class="shadow">
+				<section class="shadow col-1 first">
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -145,7 +151,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 
-				<section class="shadow">
+				<section class="shadow col-1">
 					<figure>
 						<img src="images/skate_shoe.jpg" alt="Pair of Skater Shoes">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -155,7 +161,7 @@
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				</section>
 
-				<section class="shadow">
+				<section class="shadow col-1">
 					<figure>
 						<img src="images/heel_3.jpg" alt="Picture of baby shoes">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
